<resources>
    <string name="app_name">Hqwat</string>
    <string name="field_req">Field required</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="login">Log In</string>
    <string name="code">Code</string>
    <string name="user_phone">User Phone</string>
    <string name="are_you_have_account">Are You Have Account ?</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="something">Check internet connection</string>
    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="refuse">Refuse</string>
    <string name="no_requests">No requests</string>
    <string name="req_refused">Your request refused</string>
    <string name="req_accepted">Your request accepted</string>
    <string name="no_conversation">No conversation</string>
    <string name="password">Password</string>
    <string name="log_in2">Log In</string>
    <string name="or">OR</string>
    <string name="create_an_account">Create an account ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="you_invited_by_a_subscriber_to_app">You invited by a subscriber to app</string>
    <string name="favorite_league">Favorite league</string>
    <string name="your_favorite_team">Your favorite team</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="start">Start</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="resend">Resend</string>
    <string name="enter_code_sent_to">Enter code sent to</string>
    <string name="password_short">Password to short</string>
    <string name="password_not_match">Password not match</string>
    <string name="ch_nationality">Choose Nationality</string>
    <string name="ch_gender">Choose gender</string>
    <string name="ch_league">Choose League</string>
    <string name="ch_team">Choose Your Team</string>
    <string name="select">Select</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="user_code">User code</string>
    <string name="no_data_to_show">No Data To Show</string>
    <string name="previous_matches">Previous matches</string>
    <string name="upcoming_matches">Upcoming matches</string>
    <string name="charge">Charge</string>
    <string name="stars">Stars</string>
    <string name="championship">Championship</string>
    <string name="switch_user">Switch User</string>
    <string name="notifications_control">Notifications Control</string>
    <string name="change_language">Change Language</string>
    <string name="time_clock">Time clock</string>
    <string name="contact_us">Contact Us</string>
    <string name="average_rates">Average Rates</string>
    <string name="you_rate">You Rate</string>
    <string name="haqawat_rating">Haqawat Rating</string>
    <string name="ranking_table">Ranking table</string>
    <string name="tournament_history">Tournament history</string>
    <string name="premier_league">Premier League</string>
    <string name="la_liga">La Liga</string>
    <string name="italian_league">Serie A League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="champions_league">Champions League</string>
    <string name="saudi_league">Saudi League</string>
    <string name="egyptian_league">Egyptian League</string>
    <string name="french_league">French League</string>
    <string name="matches">Matches</string>
    <string name="correct_expectations">Correct expectations</string>
    <string name="wrong_expectations">Wrong expectations</string>
    <string name="email_exist">Email exist</string>
    <string name="user_is_block">User is blocked</string>
    <string name="conf_code_incorrect">Confirm code is incorrect</string>
    <string name="sub_code_incorrect">Subscribe invitation code incorrect</string>
    <string name="round">Round</string>
    <string name="expect_now">Expect Now</string>
    <string name="no_expectation">No Expectation</string>
    <string name="correct_expectation">Correct Expectation</string>
    <string name="wrong_expectation">Wrong Expectation</string>
    <string name="connot_expt_match">Cannot expect this match</string>
    <string name="league">League</string>
    <string name="total">Total :</string>
    <string name="favorite_team">Favorite Team</string>
    <string name="candidate_club_for_the_championship">Recommended Team</string>
    <string name="no_team">No Team</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="p">P</string>
    <string name="upgrade_account">Please upgrade your account by invitation or payment</string>
    <string name="payment">Payment</string>
    <string name="continue2">Continue</string>
    <string name="points_balance">Points balance</string>
    <string name="top_tournament">Top of the champion</string>
    <string name="champion_bonus">Champion bonus</string>
    <string name="champion_system">Champion system</string>
    <string name="upgrade">Upgrade</string>
    <string name="pinned_nominations">Pinned nominations </string>
    <string name="points">Points</string>
    <string name="press_here"><![CDATA[<font color="#d22727">(here)</font>]]></string>
    <string name="competition">Competition</string>
    <string name="recommended_team">Recommended Team</string>
    <string name="control">Control</string>
    <string name="send">Send</string>
    <string name="ch">Choose</string>
    <string name="no_season_league">No season to this league</string>
    <string name="season_finished">This season is finished</string>
    <string name="favorite_team_belongs_league">This favorite team not belongs to this league</string>
    <string name="recommended_team_not_belongs_league">This recommended team not belongs to this league</string>
    <string name="phone_number">Phone number</string>
    <string name="message">Message</string>
    <string name="suc">Success!</string>
    <string name="select2">Select</string>
    <string name="reward_monthlt">Note: Determining the value of the monthly rewards for the contestants (the ten winners) after the trial period of the program ends, and it will be updated monthly.</string>
    <string name="total_points">Total points:</string>
    <string name="change_password">Change password</string>
    <string name="update">Update</string>
    <string name="user_not_found">User not found</string>
    <string name="comp_sign_up">Please complete sign up</string>
    <string name="accounts">Accounts</string>
    <string name="remove">Remove</string>
    <string name="no_accounts_to_show">No accounts to show</string>
    <string name="gifts">Gifts</string>
    <string name="copied">Copied</string>
    <string name="invitation">Friends invitations gifts</string>
    <string name="invite_friends">Invite friends</string>
    <string name="you_got_a_subscription_gift_from_friends_for">You got a subscription gift from friends for</string>
    <string name="league2">league</string>
    <string name="available_league">Available League:</string>
    <string name="no_leagues_to_show">No leagues to show</string>
    <string name="join">Join</string>
    <string name="choose">Choose</string>
    <string name="update_profile">Update Profile</string>
    <string name="forget_password">Forget Password?</string>
    <string name="we_will_send_you_a_verification_code_to_your_email">We will send you a verification code to your email</string>
    <string name="email_incorrect">Email is incorrect</string>
    <string name="check_code">Check code</string>
    <string name="verification_code_incorrect">Verification code incorrect</string>
    <string name="new_password">New password</string>
    <string name="subscribers">Subscribers</string>
    <string name="the_best_leagues">The best leagues</string>
    <string name="subscribed_leagues">Subscribed leagues</string>
    <string name="most_recommended_teams">Most recommended teams</string>
    <string name="about_hqwat">About Hqwat</string>
</resources>