<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/llRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                >
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight=".6"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".13"
                    android:textColor="@color/color5"
                    android:textSize="13sp"
                    android:text="@string/m"
                    android:gravity="center"

                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".13"
                    android:textColor="@color/color5"
                    android:textSize="13sp"
                    android:text="@string/w"
                    android:gravity="center"

                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".13"
                    android:textColor="@color/color5"
                    android:textSize="13sp"
                    android:text="@string/p"
                    android:gravity="center"

                    />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/tvNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/no_data_to_show"
            android:visibility="gone"
            />
    </FrameLayout>
</layout>