<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <data>

        <import type="android.view.View"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color18"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            >
            <Space
                android:layout_width="8dp"
                android:layout_height="0dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/competition"
                android:lines="2"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@drawable/small_rounded_primary"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/favorite_team"
                android:gravity="center"
                android:lines="2"
                android:background="@drawable/small_rounded_primary"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:layout_gravity="center_vertical"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/recommended_team"
                android:gravity="center"
                android:lines="2"
                android:background="@drawable/small_rounded_primary"

                />
            <Space
                android:layout_width="5dp"
                android:layout_height="0dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:layout_gravity="center_vertical"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/control"
                android:gravity="center"
                android:lines="2"
                android:background="@drawable/small_rounded_primary"

                />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ProgressBar
                android:id="@+id/progBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/tvNoData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/no_data_to_show"
                android:layout_gravity="center"
                android:visibility="gone"
                />
        </FrameLayout>


    </LinearLayout>

</layout>