<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="lang"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                >
                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_left_arrow"
                        android:padding="3dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:rotation='@{lang.equals("ar")?180:0}'
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/back"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@drawable/rounded_gray"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        app:startIconDrawable="@drawable/ic_lock"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"


                        >


                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:layout_marginTop="5dp"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:hint="@string/password"
                            android:singleLine="true"
                            android:background="@color/transparent"
                            android:inputType="textPassword"

                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </FrameLayout>

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/color4"
                    android:textColor="@color/color5"
                    android:textSize="15sp"
                    android:text="@string/update"
                    />
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
</layout>
